<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/menu_generate"
            android:title="@string/generate_new_qr"
            android:icon="@drawable/ic_qr_code"/>

        <item
            android:icon="@drawable/ic_showdb"
            android:title="@string/database_of_qr"
            android:id="@+id/menu_db"/>

        <item
            android:id="@+id/menu_att"
            android:title="@string/attendance"
            android:icon="@drawable/ic_attendance_icon"/>

    </group>

</menu>