<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:paddingBottom="3dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/date"
            android:ems="3"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/list_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:text="@string/name"
            android:ems="3"
            android:maxLines="5"
            android:textColor="@color/black"
            android:textSize="16sp" />

<!--        <TextView-->
<!--            android:id="@+id/list_dept_tv"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="20"-->
<!--            android:paddingStart="10dp"-->
<!--            android:paddingEnd="1dp"-->
<!--            android:text="@string/dept"-->
<!--            android:ellipsize="end"-->
<!--            android:ems="5"-->
<!--            android:maxLines="5"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16sp" />-->

        <TextView
            android:id="@+id/list_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:layout_weight="5"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

</androidx.cardview.widget.CardView>